--- a/Pages/CreateUserAccessControl.cshtml
+++ b/Pages/CreateUserAccessControl.cshtml
@@ -48,18 +48,36 @@
                     <div>
                         <hr />
                     </div>
-                    <!-- Profile Dropdown -->
-                    <div class="mb-3">
-                        <label for="ProfileId" class="form-label" style="font-size:1.2rem;">Select Profile</label>
-                        <select id="ProfileId" class="form-control" name="ProfileId" style="font-size:1.2rem;">
-                            <option value="" disabled selected>Select a Profile</option>
-                            @foreach (var profile in Model.AllProfilesData)
-                            {
-                                <option value="@profile.ProfileId">@profile.ProfileName</option>
-                            }
-                        </select>
-                        <input type="hidden" id="ProfileName" name="ProfileName" />
+
+                    <div class="row" style="font-size:1.2rem">
+                        <!-- Add radio buttons for Default View and Top View -->
+                        <div class="col-4" id="profileTypeViewContainer">
+                            <label class="form-label mt-2">Changes For: </label><br />
+                            <label class="fw-normal"><input type="radio" name="profileType" value="oldProfile" checked> Select Existing Profile</label><br />
+                            <label class="fw-normal"><input type="radio" name="profileType" value="newProfile"> Create New Profile</label>
+                        </div>
+
+                        <!-- Profile Dropdown -->
+                        <div class="col mb-3" id="profileDropdownDiv" style="display:none;">
+                            <label for="ProfileId" class="form-label" style="font-size:1.2rem;">Select Profile</label>
+                            <select id="ProfileId" class="form-control" name="ProfileId" style="font-size:1.2rem;">
+                                <option value="" disabled selected>Select a Profile</option>
+                                @foreach (var profile in Model.AllProfilesData)
+                                {
+                                    <option value="@profile.ProfileId">@profile.ProfileName</option>
+                                }
+                            </select>
+                        </div>
+
+                        <!-- Profile Input-->
+                        <div id="profileInputDiv" class="col mb-3" style="display:none;">
+                            <label for="ProfileName" class="form-label" style="font-size:1.2rem;">Profile Name</label>
+                            <input id="ProfileName" placeholder="Profile Name" class="form-control" />
+                        </div>
                     </div>
+
+                    <div><hr style="border-top: 1px solid #808080;" /></div>
+                    
 
                     <!-- Checkboxes to select pages -->
                     <div class="mb-3">
