--- a/Pages/Shared/_SidebarPartial.cshtml
+++ b/Pages/Shared/_SidebarPartial.cshtml
@@ -48,7 +48,6 @@
             </li>
 
             <li class="nav-header">Profile View</li>
-
             <li class="nav-item">
                 <a href="#" class="nav-link">
                     <i class="nav-icon fas fa-users"></i>
@@ -59,26 +58,9 @@
                 <ul class="nav nav-treeview" id="dynamicProfileName">
                     <!-- Dynamic Content will be loaded here -->
                 </ul>
-
-            </li>
-
-            <li class="nav-header">Pages View</li>
-
-            <li class="nav-item">
-                <a href="#" class="nav-link">
-                    <i class="nav-icon fas fa-book"></i>
-                    <p>
-                        Pages <i class="fas fa-angle-left right"></i>
-                    </p>
-                </a>
-                <ul class="nav nav-treeview" id="dynamicPagesList">
-                    <!-- Dynamic Content will be loaded here -->
-                </ul>
-
             </li>
 
             <li class="nav-header">Categories View</li>
-
             <li class="nav-item">
                 <a href="#" class="nav-link">
                     <i class="nav-icon fas fa-book"></i>
@@ -89,8 +71,21 @@
                 <ul class="nav nav-treeview" id="dynamicCategoriesList">
                     <!-- Dynamic Content will be loaded here -->
                 </ul>
-
             </li>
+
+            <li class="nav-header">Pages View</li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">
+                    <i class="nav-icon fas ion-android-list"></i>
+                    <p>
+                        Pages <i class="fas fa-angle-left right"></i>
+                    </p>
+                </a>
+                <ul class="nav nav-treeview" id="dynamicPagesList">
+                    <!-- Dynamic Content will be loaded here -->
+                </ul>
+            </li>
+            
         </ul>
     </nav>
     <!-- /.sidebar-menu -->
