Added New Screen - ReadUserProfile, Updated Existing

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <!-- JQVMap -->
     <link rel="stylesheet" href="~/plugins/jqvmap/jqvmap.min.css">
     <!-- Theme style -->
-    <link rel="stylesheet" href="~/dist/css/adminlte.min.css">
+    <link rel="stylesheet" href="~/dist/css/spideremt.min.css">
     <!-- overlayScrollbars -->
     <link rel="stylesheet" href="~/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
     <!-- Daterange picker -->
@@ -97,7 +97,7 @@
     <!-- overlayScrollbars -->
     <script src="~/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
     <!-- SpiderWeb App -->
-    <script src="~/dist/js/adminlte.js"></script>
+    <script src="~/dist/js/spideremt.js"></script>
     <!-- SpiderWeb for demo purposes -->
     <script src="~/dist/js/demo.js"></script>
     <!-- SpiderWeb dashboard demo (This is only for demo purposes) -->
