--- a/Pages/Shared/_SidebarPartial.cshtml
+++ b/Pages/Shared/_SidebarPartial.cshtml
@@ -41,7 +41,7 @@
                     <li class="nav-item">
                         <a href="./index" class="nav-link active">
                             <i class="far fa-circle nav-icon"></i>
-                            <p>Dashboard v1</p>
+                            <p>Dashboard</p>
                         </a>
                     </li>
                 </ul>
@@ -68,7 +68,7 @@
                         Categories <i class="fas fa-angle-left right"></i>
                     </p>
                 </a>
-                <ul class="nav nav-treeview" id="dynamicCategoriesList">
+                <ul class="nav nav-treeview ml-2" id="dynamicCategoriesList" style="border-left:3px ridge #E5E4E2">
                     <!-- Dynamic Content will be loaded here -->
                 </ul>
             </li>
