--- a/Pages/Shared/_SidebarPartial.cshtml
+++ b/Pages/Shared/_SidebarPartial.cshtml
@@ -11,7 +11,7 @@
             <img src="" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info" id="userNameDiv">
-            <a href="#" class="d-block"></a>
+            <a href="/ReadUserProfile" class="d-block"></a>
         </div>
     </div>
     <!-- SidebarSearch Form -->
@@ -55,7 +55,7 @@
                         Profile <i class="fas fa-angle-left right"></i>
                     </p>
                 </a>
-                <ul class="nav nav-treeview" id="dynamicProfileName">
+                <ul class="nav nav-treeview" id="dynamicProfileName" style="border-left:3px ridge #E5E4E2">
                     <!-- Dynamic Content will be loaded here -->
                 </ul>
             </li>
@@ -73,7 +73,7 @@
                 </ul>
             </li>
 
-            <li class="nav-header">Pages View</li>
+            <li class="nav-header">Pages View </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">
                     <i class="nav-icon fas ion-android-list"></i>
@@ -81,7 +81,7 @@
                         Pages <i class="fas fa-angle-left right"></i>
                     </p>
                 </a>
-                <ul class="nav nav-treeview" id="dynamicPagesList">
+                <ul class="nav nav-treeview" id="dynamicPagesList" style="border-left:3px ridge #E5E4E2">
                     <!-- Dynamic Content will be loaded here -->
                 </ul>
             </li>
