Moved out Code part of SP - SP_AddNewUserProfile in SP - SP_AddNewUser

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
         @await Html.PartialAsync("_HeaderPartial")
         
 
-        <aside class="main-sidebar sidebar-dark-primary elevation-4">
+        <aside class="main-sidebar sidebar-dark-primary elevation-4 rounded">
             @await Html.PartialAsync("_SidebarPartial")
         </aside>
 
